mksc/testcases/compile/fail/class_2.mks
# compile fail
# undefined super class

class A : B
end

class B
end
